--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.0.0",
     "jsonwebtoken": "^5.0.2",
     "morgan": "~1.0.0",
+    "nodemailer": "^1.4.0",
     "nodemon": "^1.3.7",
     "sqlite3": "~3.0.8"
   }
