--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Samuel Christensen",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "colors": "^1.1.2",
+    "cookie-parser": "^1.4.0",
     "express": "~4.0.0",
+    "express-session": "^1.12.1",
     "jsonwebtoken": "^5.0.2",
     "morgan": "~1.0.0",
     "nodemailer": "^1.4.0",
