--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "instant-rest-api",
-  "main": "server.js",
+  "main": "init.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/samachr/node-api"
   },
   "scripts": {
     "start": "node init.js"
+  },
+  "engines": {
+  "node": "0.12.7"
   },
   "author": "Samuel Christensen",
   "dependencies": {
@@ -15,8 +18,6 @@
     "express": "~4.0.0",
     "jsonwebtoken": "^5.0.2",
     "morgan": "~1.0.0",
-    "nodemailer": "^1.4.0",
-    "nodemon": "^1.3.7",
     "sqlite3": "~3.0.8"
   }
 }
